Added meta tags in Frontend.

--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -5,6 +5,35 @@
         <meta name="viewport" content="width=device-width" />
         %sveltekit.head%
         <title>StocksALot</title>
+        <meta name="title" content="StocksALot" />
+        <meta
+            name="description"
+            content="StocksALot is a cutting edge PoC for Stock Market Analysis employing OpenAI's GPT LLMs for insight inference."
+        />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="StocksALot" />
+        <meta
+            property="og:description"
+            content="StocksALot is a cutting edge PoC for Stock Market Analysis employing OpenAI's GPT LLMs for insight inference."
+        />
+        <meta property="og:url" content="https://stocksalot.tech/" />
+        <meta
+            property="og:image"
+            content="https://raw.githubusercontent.com/Hyperclaw79/StocksALot/main/assets/stocksalot-banner.png"
+        />
+        <meta property="og:site_name" content="StocksALot" />
+        <meta property="twitter:title" content="StocksALot" />
+        <meta
+            property="twitter:description"
+            content="StocksALot is a cutting edge PoC for Stock Market Analysis employing OpenAI's GPT LLMs for insight inference."
+        />
+        <meta property="twitter:url" content="https://stocksalot.tech/" />
+        <meta
+            property="twitter:image"
+            content="https://raw.githubusercontent.com/Hyperclaw79/StocksALot/main/assets/stocksalot-banner.png"
+        />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:site" content="@Hyperclaw79" />
         <style>
             body {
                 background-color: var(--bgColor);
